[gd_scene load_steps=47 format=3 uid="uid://dpsknhaiwvaok"]

[ext_resource type="PackedScene" uid="uid://b0jmja8u6w1le" path="res://player.tscn" id="1_gw058"]
[ext_resource type="Script" path="res://main.gd" id="1_nqkhb"]
[ext_resource type="PackedScene" uid="uid://g8plnhsw7ko6" path="res://looking_at.tscn" id="2_i4msr"]
[ext_resource type="PackedScene" uid="uid://bj44dvpiorjv0" path="res://npc.tscn" id="3_j8hae"]
[ext_resource type="AudioStream" uid="uid://bd6cdortdkh4a" path="res://sound_effects/new laugh.mp3" id="3_rgqp7"]
[ext_resource type="AudioStream" uid="uid://bmvtwxxltnlg5" path="res://sound_effects/newest laugh.mp3" id="5_e4kl8"]
[ext_resource type="ArrayMesh" uid="uid://dug3i0jfhuae0" path="res://bday party models/chair/Cheap Chair/Cheap Chair.obj" id="8_pbjgi"]
[ext_resource type="PackedScene" uid="uid://briuaooe87wy5" path="res://bday party models/FNAF Party Tables v2/source/Tables.fbx" id="9_cujrc"]
[ext_resource type="PackedScene" uid="uid://b2mdax67ua2is" path="res://bday party models/Baby Boy Closet/Baby Boy Closet.glb" id="10_mb6mf"]
[ext_resource type="PackedScene" uid="uid://da5i1ux347g5e" path="res://bday party models/Yellow Closet 3D Model/Yellow Closet 3D Model.glb" id="11_6w3bu"]
[ext_resource type="Texture2D" uid="uid://drlfc2g0f3qsw" path="res://bday party models/rug/rug2.png" id="12_b61ah"]
[ext_resource type="PackedScene" uid="uid://dv8li6yrta7gg" path="res://bday party models/cake/cake.glb" id="13_ck3fu"]
[ext_resource type="PackedScene" uid="uid://dj4ap1p4a0pq" path="res://bday party models/shelf/Simple TV Shelf 210cm.glb" id="14_6ag75"]
[ext_resource type="PackedScene" uid="uid://c32gvgbi2v2a0" path="res://bday party models/lights/Christmas Lights 3D.glb" id="15_8625m"]
[ext_resource type="PackedScene" uid="uid://bktnx4qrh6bop" path="res://bday party models/table 2/wooden_table.glb" id="15_prd1t"]
[ext_resource type="PackedScene" uid="uid://drtray8slbqp8" path="res://bday party models/sign/Happy Birthday Sign.glb" id="16_0dsmk"]
[ext_resource type="PackedScene" uid="uid://c5murct1karw5" path="res://distractions/radio/radio.tscn" id="16_rxa2u"]
[ext_resource type="AudioStream" uid="uid://c17iqxbkrixn5" path="res://sound_effects/Everybody-Wants-To-Rule-The-World.ogg" id="17_ipclt"]
[ext_resource type="PackedScene" uid="uid://iihfdnlxa4x7" path="res://distractions/interactable/interact.tscn" id="17_iw7px"]
[ext_resource type="PackedScene" uid="uid://7l6rm1rdklsc" path="res://distractions/water gun/gun.tscn" id="18_g7bia"]
[ext_resource type="PackedScene" uid="uid://cxf2vfv7i6g8a" path="res://distractions/dog balloon/balloon.tscn" id="20_ixt4l"]
[ext_resource type="AudioStream" uid="uid://cbd7yxpq5itki" path="res://sound_effects/human_group_children_x6_uk_aged_3_to_8_fake_crying.mp3" id="21_2k0ky"]
[ext_resource type="PackedScene" uid="uid://nb434uaehnad" path="res://distractions/gift/gift.tscn" id="21_txk8d"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dpdt8"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_vesw3"]
sky_material = SubResource("ProceduralSkyMaterial_dpdt8")

[sub_resource type="Environment" id="Environment_dtwxr"]
background_mode = 2
sky = SubResource("Sky_vesw3")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i578l"]
albedo_color = Color(0.67451, 0.819608, 0.866667, 1)

[sub_resource type="BoxMesh" id="BoxMesh_m8v3l"]
material = SubResource("StandardMaterial3D_i578l")

[sub_resource type="BoxShape3D" id="BoxShape3D_1di0b"]

[sub_resource type="SphereShape3D" id="SphereShape3D_35fpu"]
radius = 3.55325

[sub_resource type="SphereShape3D" id="SphereShape3D_k42jd"]
radius = 3.40924

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ku33p"]
load_path = "res://.godot/imported/rug texture.png-05c9ed10c51477abc9cfded751f520cc.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g0afh"]
albedo_color = Color(0.6, 0.6, 0.6, 1)
albedo_texture = SubResource("CompressedTexture2D_ku33p")
uv1_scale = Vector3(1.635, 1.635, 1.635)
uv1_offset = Vector3(0.085, 0.255, 2.08165e-12)

[sub_resource type="CylinderMesh" id="CylinderMesh_wawls"]
material = SubResource("StandardMaterial3D_g0afh")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m4ugk"]
albedo_color = Color(0.486275, 0.486275, 0.486275, 1)
albedo_texture = ExtResource("12_b61ah")
uv1_scale = Vector3(1.885, 1.885, 1.885)
uv1_offset = Vector3(0.02, 1.065, -0.115)

[sub_resource type="CylinderMesh" id="CylinderMesh_smfbu"]
material = SubResource("StandardMaterial3D_m4ugk")

[sub_resource type="BoxShape3D" id="BoxShape3D_k5dw2"]
size = Vector3(22.6855, 7.11924, 1.83839)

[sub_resource type="BoxShape3D" id="BoxShape3D_0pqyg"]
size = Vector3(24.5424, 8.26825, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_pxb1j"]
size = Vector3(1, 7.82123, 13.4202)

[sub_resource type="BoxShape3D" id="BoxShape3D_356l6"]
size = Vector3(1.02637, 8.16931, 13.7543)

[sub_resource type="BoxShape3D" id="BoxShape3D_68gpf"]
size = Vector3(7.82086, 0.587219, 2.41284)

[sub_resource type="BoxShape3D" id="BoxShape3D_gt1s3"]
size = Vector3(2.82397, 4.89954, 1.5675)

[sub_resource type="BoxShape3D" id="BoxShape3D_mhffj"]
size = Vector3(2.99414, 5.25964, 1.49133)

[sub_resource type="BoxShape3D" id="BoxShape3D_wvubl"]
size = Vector3(1.04004, 0.996926, 6.52899)

[sub_resource type="BoxShape3D" id="BoxShape3D_m1je5"]
size = Vector3(1, 0.0434876, 6.74878)

[sub_resource type="BoxShape3D" id="BoxShape3D_24wsr"]

[node name="Room" type="Node3D"]
script = ExtResource("1_nqkhb")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
visible = false
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dtwxr")

[node name="player" parent="." instance=ExtResource("1_gw058")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.411306, 1.51115, 8.5252)

[node name="hand" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.418152, -1.87243)

[node name="walls2" type="Node" parent="."]

[node name="floor" type="MeshInstance3D" parent="walls2"]
transform = Transform3D(39.1045, 0, 0, 0, 1, 0, 0, 0, 20.2275, 0, 0, 0)
mesh = SubResource("BoxMesh_m8v3l")
skeleton = NodePath("../..")

[node name="floor_area" type="Area3D" parent="walls2/floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="walls2/floor/floor_area"]
shape = SubResource("BoxShape3D_1di0b")

[node name="roof" type="MeshInstance3D" parent="walls2"]
transform = Transform3D(39.1045, 0, 0, 0, 1, 0, 0, 0, 20.2275, 0, 7.76046, 0)
mesh = SubResource("BoxMesh_m8v3l")
skeleton = NodePath("../..")

[node name="walls" type="Node3D" parent="walls2"]
transform = Transform3D(-1.70931e-06, -1, 7.05507e-15, 39.1045, -4.37114e-08, -7.05507e-15, 1.36392e-14, 3.48787e-16, 20.2275, -9.25155, 10.9023, 0)

[node name="wall" type="MeshInstance3D" parent="walls2/walls"]
transform = Transform3D(0.475152, 1.11022e-16, -7.43911e-22, -8.52651e-13, 1, -4.0334e-20, -2.47831e-21, -3.99959e-25, 1.1875, -0.0547844, 2.45967, -5.47191e-18)
mesh = SubResource("BoxMesh_m8v3l")
skeleton = NodePath("../../..")

[node name="wall2" type="MeshInstance3D" parent="walls2/walls"]
transform = Transform3D(0.475152, 1.11022e-16, 9.59692e-24, -8.52651e-13, 1, -1.68184e-22, -2.47831e-21, -3.99959e-25, 1, -0.0547845, -20.6495, 3.93004e-16)
mesh = SubResource("BoxMesh_m8v3l")
skeleton = NodePath("../../..")

[node name="wall3" type="MeshInstance3D" parent="walls2/walls"]
transform = Transform3D(0.475152, -1.11781e-09, -4.47966e-08, -8.12183e-07, -4.37114e-08, -40.0753, 4.01524e-08, 0.0494376, -8.66024e-08, -0.0547845, -8.87796, 0.512436)
mesh = SubResource("BoxMesh_m8v3l")
skeleton = NodePath("../../..")

[node name="wall4" type="MeshInstance3D" parent="walls2/walls"]
transform = Transform3D(0.475152, -1.11781e-09, -4.47966e-08, -8.12183e-07, -4.37114e-08, -40.0753, 4.01524e-08, 0.0494376, -8.66024e-08, -0.0547845, -8.87796, -0.197519)
mesh = SubResource("BoxMesh_m8v3l")
skeleton = NodePath("../../..")

[node name="laughing" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.53797, 0, 0)

[node name="NPC" parent="laughing" node_paths=PackedStringArray("player") instance=ExtResource("3_j8hae")]
transform = Transform3D(0.822323, 0, -0.569021, 0, 1, 0, 0.569021, 0, 0.822323, 12.4789, 1.496, 4.77145)
player = NodePath("../../player")
questions_path = "res://group_qs/laughing.json"

[node name="NPC2" parent="laughing" node_paths=PackedStringArray("player") instance=ExtResource("3_j8hae")]
transform = Transform3D(-0.394198, 0, 0.919025, 0, 1, 0, -0.919025, 0, -0.394198, 13.5827, 1.496, 6.10281)
player = NodePath("../../player")
questions_path = "res://group_qs/laughing.json"

[node name="NPC3" parent="laughing" node_paths=PackedStringArray("player") instance=ExtResource("3_j8hae")]
transform = Transform3D(-0.94707, 0, -0.321026, 0, 1, 0, 0.321026, 0, -0.94707, 14.1455, 1.496, 4.86454)
player = NodePath("../../player")
questions_path = "res://group_qs/laughing.json"

[node name="looking_at" parent="laughing" node_paths=PackedStringArray("player", "bday_music", "others_dot") instance=ExtResource("2_i4msr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.3613, 1.29025, 5.09985)
player = NodePath("../../player")
sound_fx = ExtResource("3_rgqp7")
bday_music = NodePath("../../distractions/Radio/bday_music")
others_dot = NodePath("../../CRYING/looking_at")

[node name="laughter" type="AudioStreamPlayer3D" parent="laughing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.3597, 1.53265, 4.91157)
stream = ExtResource("5_e4kl8")
volume_db = 50.0
max_db = 6.0
autoplay = true
max_distance = 15.0

[node name="laughing_listening" type="Area3D" parent="laughing"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="laughing/laughing_listening"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.6587, 0.54803, 4.5741)
shape = SubResource("SphereShape3D_35fpu")

[node name="CRYING" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_j8hae")]
transform = Transform3D(0.58976, 0, -0.807578, 0, 1, 0, 0.807578, 0, 0.58976, -9.05532, 1.56611, -1.51068)
player = NodePath("../player")
questions_path = "res://group_qs/crying.json"
can_talk = true

[node name="looking_at" parent="CRYING" node_paths=PackedStringArray("player", "bday_music", "others_dot") instance=ExtResource("2_i4msr")]
transform = Transform3D(1, 0, -3.72312e-10, 0, 1, 0, -3.72312e-10, 0, 1, 0.272348, 0, 0.0860186)
player = NodePath("../../player")
sound_fx = ExtResource("21_2k0ky")
bday_music = NodePath("../../distractions/Radio/bday_music")
others_dot = NodePath("../../laughing/looking_at")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="CRYING"]
stream = ExtResource("21_2k0ky")
volume_db = 30.0
autoplay = true
max_distance = 15.0

[node name="crying_listening" type="Area3D" parent="CRYING"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CRYING/crying_listening"]
transform = Transform3D(1, 0, 2.93498e-08, 0, 1, 0, -8.16513e-09, 0, 1, 0, -0.557404, 0)
shape = SubResource("SphereShape3D_k42jd")

[node name="party" type="Node3D" parent="."]

[node name="table2" parent="party" instance=ExtResource("9_cujrc")]
transform = Transform3D(1.1236, 0, 0, 0, 0.955449, 0, 0, 0, 0.580199, -0.924547, 1.55137, 2.19117)

[node name="closet1" parent="party" instance=ExtResource("10_mb6mf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.10292, 2.96272, -3.0868)

[node name="closet2" parent="party" instance=ExtResource("11_6w3bu")]
transform = Transform3D(0.871505, 0, 0.490387, 0, 1, 0, -0.490387, 0, 0.871505, -7.62647, 2.77524, -3.86685)

[node name="rug" type="Node3D" parent="party"]
transform = Transform3D(1.41282, 0, 0, 0, 1.41282, 0, 0, 0, 1.69322, 8.93796, -0.190107, 4.45458)

[node name="model" type="MeshInstance3D" parent="party/rug"]
transform = Transform3D(3.38142, 0, 0, 0, 0.00666652, 0, 0, 0, 2.77288, -1.2058, 0.521564, 0.109492)
mesh = SubResource("CylinderMesh_wawls")

[node name="rug2" type="Node3D" parent="party"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.13914, 0)

[node name="model" type="MeshInstance3D" parent="party/rug2"]
transform = Transform3D(5.75472, 0, 0, 0, 0.0164484, 0, 0, 0, 5.31414, -0.872573, 0.743935, 2.24008)
mesh = SubResource("CylinderMesh_smfbu")

[node name="cake" parent="party" instance=ExtResource("13_ck3fu")]
transform = Transform3D(0.797205, 0, 0, 0, 0.797205, 0, 0, 0, 0.797205, -0.688503, 2.90223, 2.12171)

[node name="shelf" parent="party" instance=ExtResource("14_6ag75")]
transform = Transform3D(0.0116311, 0, 2.55761, 0, 3.3195, 0, -2.74245, 0, 0.0108469, -10.6684, 0.501732, 6.92631)

[node name="lights" type="Node3D" parent="party"]
transform = Transform3D(0.133232, 0.124437, 0.545259, -0.0295369, 0.5613, -0.120881, -0.558497, 1.25107e-09, 0.136467, -5.21903, 5.91202, -2.1655)
visible = false

[node name="Sketchfab_Scene" parent="party/lights" instance=ExtResource("15_8625m")]
transform = Transform3D(7.45096, 0, 0, 0, 7.45096, 0, 0, 0, 7.45096, 10.0274, 14.8884, 51.8876)

[node name="lights2" type="Node3D" parent="party"]
transform = Transform3D(0.307089, 0.0604266, 0.34827, -0.0236778, 0.309955, -0.101564, -0.342853, 0.0327175, 0.318956, -1.9337, 5.89213, 2.25653)

[node name="Sketchfab_Scene" parent="party/lights2" instance=ExtResource("15_8625m")]
transform = Transform3D(7.45096, 0, 0, 0, 7.45096, 0, 0, 0, 7.45096, 10.0274, 14.8884, 51.8876)

[node name="lights3" type="Node3D" parent="party"]
transform = Transform3D(-0.127324, 0.0719688, 0.570503, 0.186605, 0.348444, -0.0564491, -0.466054, 0.119853, -0.178461, -0.185946, 6.42222, 2.80136)

[node name="Sketchfab_Scene" parent="party/lights3" instance=ExtResource("15_8625m")]
transform = Transform3D(7.45096, 0, 0, 0, 7.45096, 0, 0, 0, 7.45096, 10.0274, 14.8884, 51.8876)

[node name="bday_sign" parent="party" instance=ExtResource("16_0dsmk")]
transform = Transform3D(-2.1044, 1.68485e-17, 0.161186, -0.00334468, 2.11011, -0.0436672, -0.161151, -0.0437951, -2.10394, 10.342, 3.91474, 3.53395)

[node name="chair" type="MeshInstance3D" parent="party"]
transform = Transform3D(0.109179, 0, 0.994022, 0, 1, 0, -0.994022, 0, 0.109179, -2.84255, 0.57734, 4.27931)
mesh = ExtResource("8_pbjgi")
skeleton = NodePath("../..")

[node name="chair2" type="MeshInstance3D" parent="party"]
transform = Transform3D(-0.239499, 0, 0.970897, 0, 1, 0, -0.970897, 0, -0.239499, 1.28723, 0.57734, 4.27931)
mesh = ExtResource("8_pbjgi")
skeleton = NodePath("../..")

[node name="chair3" type="MeshInstance3D" parent="party"]
transform = Transform3D(-0.0192498, 0, 0.999815, 0, 1, 0, -0.999815, 0, -0.0192497, -0.559842, 0.57734, 4.27931)
mesh = ExtResource("8_pbjgi")
skeleton = NodePath("../..")

[node name="chair4" type="MeshInstance3D" parent="party"]
transform = Transform3D(-0.00661479, 0, -0.999978, 0, 1, 0, 0.999978, 0, -0.0066148, 0.38944, 0.57734, -0.120255)
mesh = ExtResource("8_pbjgi")
skeleton = NodePath("../..")

[node name="chair5" type="MeshInstance3D" parent="party"]
transform = Transform3D(-0.00661479, 0, -0.999978, 0, 1, 0, 0.999978, 0, -0.0066148, -2.82584, 0.57734, -0.120255)
mesh = ExtResource("8_pbjgi")
skeleton = NodePath("../..")

[node name="table_2" parent="party" instance=ExtResource("15_prd1t")]
transform = Transform3D(3.10939, 0, 0, 0, 3.10939, 0, 0, 0, 3.10939, -0.94187, 0.553334, 7.13254)

[node name="lights" type="Node3D" parent="."]

[node name="SpotLight3D" type="SpotLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 0.045206, 0.998978, 0, -0.998978, 0.045206, -0.842831, 7.10148, 0.41732)
light_color = Color(0.729412, 0.615686, 0.227451, 1)
light_energy = 11.182
spot_range = 24.2158
spot_angle = 60.9099

[node name="OmniLight3D" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.707, 3.73891, 0)
light_color = Color(0.160784, 0.733333, 0.27451, 1)
light_energy = 3.0
omni_range = 16.4628

[node name="OmniLight3D2" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.07631, 3.73891, 2.29671)
light_color = Color(0.321569, 0.615686, 1, 1)
light_energy = 3.0
omni_range = 12.5066

[node name="OmniLight3D3" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.13668, 3.73891, 7.08726)
light_color = Color(0.980392, 0.360784, 0.560784, 1)
light_energy = 3.0
omni_range = 14.6804

[node name="OmniLight3D4" type="OmniLight3D" parent="lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.07631, 3.73891, 7.14234)
light_color = Color(0.756863, 0.439216, 1, 1)
light_energy = 3.0
omni_range = 10.6155

[node name="distractions" type="Node" parent="."]

[node name="Radio" parent="distractions" node_paths=PackedStringArray("bday_music") instance=ExtResource("16_rxa2u")]
transform = Transform3D(0.996121, 0, 0.0879903, 0, 1, 0, -0.0879903, 0, 0.996121, -3.78433, 2.46215, 2.61979)
bday_music = NodePath("bday_music")

[node name="bday_music" type="AudioStreamPlayer3D" parent="distractions/Radio"]
transform = Transform3D(1, 0, -8.3593e-10, 0, 1, 0, -8.77901e-10, 0, 1, 0.413405, 0.211818, -0.0882325)
stream = ExtResource("17_ipclt")
volume_db = -50.0
autoplay = true

[node name="interact" parent="distractions/Radio" node_paths=PackedStringArray("player_hand", "object") instance=ExtResource("17_iw7px")]
transform = Transform3D(1, 0, -2.63819e-10, 0, 1, 0, -9.59357e-11, 0, 1, -0.0312614, -0.107643, 0.0624466)
player_hand = NodePath("../../../player/hand")
object = NodePath("..")
instructions_text = "Press Mouse to interact!"

[node name="Gun" parent="distractions" instance=ExtResource("18_g7bia")]
transform = Transform3D(0.110706, 0, 0.993853, 0, 1, 0, -0.993853, 0, 0.110706, 1.9422, 2.38147, 2.61629)

[node name="interact" parent="distractions/Gun" node_paths=PackedStringArray("player_hand", "object") instance=ExtResource("17_iw7px")]
transform = Transform3D(0.110706, 0, -0.993853, 0, 1, 0, 0.993853, 0, 0.110706, -0.0417914, -0.19035, 0.0878339)
player_hand = NodePath("../../../player/hand")
object = NodePath("..")
can_pick_up = true
actions_text = "Press Left Mouse to shoot!"

[node name="Balloon" parent="distractions" instance=ExtResource("20_ixt4l")]
transform = Transform3D(0.0546539, 0, 0.998505, 0, 1, 0, -0.998505, 0, 0.0546539, -0.460447, 2.06508, 7.23678)

[node name="interact" parent="distractions/Balloon" node_paths=PackedStringArray("player_hand", "object") instance=ExtResource("17_iw7px")]
transform = Transform3D(1, 0, 5.70086e-11, 0, 1, 0, 6.25766e-11, 0, 1, 0.0408735, -0.190483, -0.45419)
player_hand = NodePath("../../../player/hand")
object = NodePath("..")
instructions_text = "Press Left Mouse to interact!"

[node name="Gift" parent="distractions" instance=ExtResource("21_txk8d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.6915, 2.3864, 8.65325)

[node name="interact" parent="distractions/Gift" node_paths=PackedStringArray("player_hand", "object") instance=ExtResource("17_iw7px")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.406045, -0.208717, 0.0828581)
player_hand = NodePath("../../../player/hand")
object = NodePath("..")
can_pick_up = true

[node name="collisions" type="Node" parent="."]

[node name="StaticBody3D" type="StaticBody3D" parent="collisions"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisions/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.382829, 4.18946, -4.17869)
shape = SubResource("BoxShape3D_k5dw2")

[node name="StaticBody3D2" type="StaticBody3D" parent="collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 11.3153)

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisions/StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.427628, 3.63412, -0.99286)
shape = SubResource("BoxShape3D_0pqyg")

[node name="StaticBody3D3" type="StaticBody3D" parent="collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.5985, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisions/StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.2128, 3.41061, 3.19861)
shape = SubResource("BoxShape3D_pxb1j")

[node name="StaticBody3D4" type="StaticBody3D" parent="collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.8341, 0, 2.82708)

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisions/StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.10931, 3.58466, 0.179382)
shape = SubResource("BoxShape3D_356l6")

[node name="StaticBody3D5" type="StaticBody3D" parent="collisions"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisions/StaticBody3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.06168, 1.53437, 2.16085)
shape = SubResource("BoxShape3D_68gpf")

[node name="StaticBody3D6" type="StaticBody3D" parent="collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.41869, 0, -2.29248)

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisions/StaticBody3D6"]
transform = Transform3D(0.912627, 0, 0.408792, 0, 1, 0, -0.408792, 0, 0.912627, 0.464804, 3.01346, 0.102719)
shape = SubResource("BoxShape3D_gt1s3")

[node name="StaticBody3D7" type="StaticBody3D" parent="collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.06447, 0, -1.60134)

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisions/StaticBody3D7"]
transform = Transform3D(0.845271, 0, -0.534338, 0, 1, 0, 0.534338, 0, 0.845271, -0.16924, 3.24848, 0.530107)
shape = SubResource("BoxShape3D_mhffj")

[node name="StaticBody3D8" type="StaticBody3D" parent="collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.9878, 0, 6.78508)

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisions/StaticBody3D8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.347402, 0.71184, 0.572113)
shape = SubResource("BoxShape3D_wvubl")

[node name="StaticBody3D9" type="StaticBody3D" parent="collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.6621, 2.00116, 7.3812)

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisions/StaticBody3D9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.131752, 0.0311279)
shape = SubResource("BoxShape3D_m1je5")

[node name="StaticBody3D10" type="StaticBody3D" parent="collisions"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.21326, 0, 3.46112)

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisions/StaticBody3D10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18375, 1.01803, 3.62118)
shape = SubResource("BoxShape3D_24wsr")

[node name="timers" type="Node" parent="."]

[node name="crying" type="Label" parent="timers"]
offset_right = 40.0
offset_bottom = 23.0

[node name="endgame" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="laughing/laughing_listening" to="." method="_on_laughing_listening_body_entered"]
[connection signal="body_exited" from="laughing/laughing_listening" to="." method="_on_laughing_listening_body_exited"]
[connection signal="lock_rotation" from="CRYING" to="player" method="_on_crying_lock_rotation"]
[connection signal="body_entered" from="CRYING/crying_listening" to="." method="_on_crying_listening_body_entered"]
[connection signal="body_exited" from="CRYING/crying_listening" to="." method="_on_crying_listening_body_exited"]
[connection signal="timeout" from="endgame" to="." method="_on_endgame_timeout"]
